--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,11 +19,11 @@
         {% if prefix == '/zh/' %}
           <a class="page-link" href="/zh/">首页</a>
           <a class="page-link" href="/zh/finclip.html">FinClip</a>
-          <a class="page-link" href="/zh/neuronkit.html">NeuronKit</a>
+          <a class="page-link" href="/zh/neuronkit/index.html">NeuronKit</a>
         {% else %}
           <a class="page-link" href="/en/">Home</a>
           <a class="page-link" href="/en/finclip.html">FinClip</a>
-          <a class="page-link" href="/en/neuronkit.html">NeuronKit</a>
+          <a class="page-link" href="/en/neuronkit/index.html">NeuronKit</a>
         {% endif %}
       </div>
     </nav>
