full migration of infographics html to markdown

--- a/_layouts/neuronkit.html
+++ b/_layouts/neuronkit.html
@@ -317,7 +317,9 @@
   <main>
     <section class="py-10 md:py-14">
       <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
+        {% unless page.hide_title %}
         <h1 class="text-3xl md:text-4xl font-extrabold leading-tight">{{ page.title }}</h1>
+        {% endunless %}
         <article class="prose mt-6">
           {{ content }}
         </article>
